Fix up convergence algorithm for setTargetAtTime

The algorithm to determine if a setTargetAtTime automation converged
to the target value incorrectly said the algorithm converged when it
had not.

Adjust the algorithm, simplifying it.  There are now three simple
criteria:

1. 10 time constants have passed since the start of the event
2. If the target is 0, the current value is less than exp(-10)
3. If the target is not 0, the relative error between the target and
   the current value must be less than exp(-10).

Bug: 835298
Test: AudioParam/audioparam-setTargetAtTime-limit.html
Change-Id: Iffc137b40929dc6542ad647a4e974ae11271157f
Reviewed-on: https://chromium-review.googlesource.com/1022515
Commit-Queue: Raymond Toy <rtoy@chromium.org>
Reviewed-by: Hongchan Choi <hongchan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#552863}
Former-commit-id: b0aa44ae53c07d7b407e34a66d5ae12b58c240ed